Adding changes to repository

--- a/server/manifest.yml
+++ b/server/manifest.yml
@@ -1,11 +1,11 @@
   applications:
-  - name: djangoapp
+  - name: mydealerapp
     routes:
-      - route: $HOST.$DOMAIN
+      - route: optimalchiefdealerapp.mybluemix.net
     memory: 128M
     buildpack: python_buildpack
-  - name: djangoapp-nginx
+  - name: mydealerapp-nginx
     routes:
-      - route: $HOST.$DOMAIN/static
+      - route: optimalchiefdealerapp.mybluemix.net/static
     memory: 128M
     buildpack: staticfile_buildpack
