--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,3 +2,17 @@ requests
 Django
 gunicorn==20.0.4
 Pillow==8.0.1
+six==1.16.0
+sqlparse==0.4.2
+urllib3==1.26.8
+websocket-client==1.1.0
+ibm-cloud-sdk-core
+ibm-watson
+idna==3.3
+Pillow==8.0.1
+PyJWT==2.3.0
+python-dateutil==2.8.2
+asgiref==3.4.1
+backports.zoneinfo==0.2.1
+certifi==2021.10.8
+charset-normalizer==2.0.10
